--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 *{
 margin: 0;
 padding: 0;
@@ -10,6 +11,17 @@ background: black;
 }
 a {
 text-decoration: none;
+}
+#head {
+position: relative;
+width: 100%;
+top: 18px;
+}
+.h1 {
+float: right;
+font-size: 25px;
+font-family: 'Open Sans', sans-serif;
+margin-right: 5%;
 }
 .ul {
 list-style-type: none;
@@ -23,11 +35,20 @@ font-family: 'Heebo', sans-serif;
 display: flex;
 align-items: center;
 position: relative;
-margin-top: 15px;
+margin-top: 10px;
 left: 5%;
 height: 80px;
-border: 1px solid white;
 border-radius: 8px;
+background: linear-gradient(to left, black, black, rgba(255,255,255,0.4));
+}
+.br {
+position: relative;
+left: 10%;
+width: 91%;
+height: 1px;
+margin-top: 6px;
+background: linear-gradient(to right, black, white, white);
+border-radius: 0.1px;
 }
 .text h1 {
 font-family: 'Heebo', sans-serif;
@@ -50,7 +71,7 @@ position: sticky;
 font-family: 'Heebo', sans-serif;
 fon-weight: 300;
 text-decoration: none;
-background: grey;
+background: white;
 border-radius: 18px;
 font-size: 13px;
 padding: 5px 10px 6px 10px;
@@ -69,7 +90,7 @@ background: #2f3640;
 height: 30px;
 border-radius: 40px;
 padding: 10px;}
-.box:hover > #search-txt{width: 200px;top: 50px;}
+.box:hover > #search-txt{width: 150px;top: 50px;}
 .box:hover > .sebtn{background: white;}
 .sebtn{
 color: #e84118;
