--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,29 @@
 body{
-background-color: #582841; 
+background-color: #2C3A47; 
 }
 
 h1{
 color: white;
+font-family: roboto;
 letter-spacing: 5px;
 } 
 
 h3{
 border: 2px solid white;
 border-radius: 20px;
-padding: 5px;
+padding: 10px;
 color: white;
-box-shadow: 0px 0px 10px 0px white;
+margin: 5px;
+font-family: roboto;
 }
   
 a{
+text-decoration: none;
 color: white;
 border: 2px solid white;
 padding: 10px;
 border-radius: 20px;
-box-shadow: 0px 0px 10px 0px white;
+font-family: roboto;
 letter-spacing: 4px;
 width: 120px;
 }
@@ -33,5 +36,17 @@ color: white;
 p{
 color: white;
 letter-spacing: 1px;
+font-family: roboto;
 width: 120;
+}
+
+h2{
+color: white;
+font-family: combo;
+font-size: 35px;
+text-decoration: none;
+display: flex;
+justify-content: center;
+text-align: center;
+align-items: center;
 }
