--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     position: relative;
     left: 110%;
     top: -18px;
-    background: green;
+    background: orange;
     width: 20px;
     height: 20px;
     border-radius: 50%;
