--- a/style.css
+++ b/style.css
@@ -2,30 +2,31 @@
 body {
 	width: 100%;
 	height: 100vh;
-	background: rgb(240, 239, 243);
+	background: #000;
 	margin: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	font-family: 'Poppins', sans-serif;
+	color: #fff;
 }
 .header h1{
 	margin-top: -10px;
 	 font-size: 35px; 
-	 color: #000;
+	 color: #fff;
 	font-family: 'Lemonada', cursive;
 	font-weight: 900;
 }
 .header a{
 	position: relative;
 	text-decoration: none;
-	color: #1d1d1d;
+	color: #fff;
 	top: 5px;
 	left: 85%;
-	background: #fff;
+	background: #444;
 	padding: 3px 10px;
-	box-shadow: 0px 15px 30px rgb(0,0,0,0.09);
+	box-shadow: 0px 0 10px #38AECC;
 	border-radius: 10px;
 }
 .header a:hover{
@@ -45,9 +46,9 @@ body {
 .container{
 	width: 340px;
 	height: 520px;
-	background: #fff;
+	background: #000;
 	border-radius: 15px;
-	box-shadow: 4px 4px 30px rgb(0,0,0,0.06);
+	box-shadow: 0px 0px 20px #38AECC;
 	padding: 10px;
 	overflow-y: scroll;
 }
@@ -56,16 +57,18 @@ body {
 }
 .container form{
 	width: 100%;
-	border: 1px solid #000;
+	border: 1px solid #fff;
 	border-radius: 4px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 }
 .container form input{
+  color: #fff;
 	border: none;
 	outline: none;
 	box-shadow: none;
+	background: #000;
 	width: 91%;
 	font-size: 15px;
 	font-weight: 500;
@@ -78,42 +81,58 @@ body {
 	padding: 10px 0;
 }
 .product{
-	background: #fff;
+	background: #000;
+	color: #fff;
 	border-radius: 10px;
-   box-shadow: 4px 4px 30px rgb(0,0,0,0.1);
-	height: 70px;
+   box-shadow: 0 0 10px #38aecc;
+	height: 120px;
 	display: flex;
 	align-items: center;
 	cursor: pointer;
-	margin: 7px;
+	margin: 3px;
+	margin-bottom: 20px;
 }
 .product .p-details{
 	padding: 10px;
 }
 .product img{
-   margin-left: 8px;
-	width: 55px;
-	height: 55px;
+  position: relative;
+  margin-left: 11px;
+	width: 45px;
+	height: 45px;
 	object-fit: cover;
 	border-radius: 5px;
-   box-shadow: 0 5px 10px rgb(0,0,0,0.5);
+   box-shadow: 0 0 15px #028090;
+   top: -20px;
 }
 .product .p-details h2{
-	font-size: 20px;
-	color: #1d1d1d;
+  position: relative;
+  top: 5px;
+	font-size: 19px;
+	color: #fff;
 }
+.product .p-details span{
+  position: relative;
+  color: #8aa2a9;
+  top: 15px;
+  right: 50px;
+}
+
 .product .p-details a{
    position: relative;
    text-decoration: none;
-   color: #1d1d1d;
-   top: -15px;
-   left: 0px;
-   background: #dee1e2;
-   padding: 0px 30px;
+   color: #fff;
+   top: -44px;
+   left: 200px;
+   background:  #38AECC;
+   padding: 0px 10px;
    border-radius: 10px;
    font-weight: 500;
+   font-size: 20px;
+   box-shadow: 0 0px 15px #38AECC;
 }
 .product .p-details a:hover{
 	background: #000;
 	color: cyan;
+	box-shadow: 0 0 15px #000;
 }
