--- a/style.css
+++ b/style.css
@@ -2,31 +2,31 @@
 body {
 	width: 100%;
 	height: 100vh;
-	background: #000;
+	background: #222;
 	margin: 0;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	font-family: 'Poppins', sans-serif;
 	color: #fff;
 }
 .header h1{
-	margin-top: -10px;
+  position: relative;
+	text-align: center;
 	 font-size: 35px; 
 	 color: #fff;
 	font-family: 'Lemonada', cursive;
 	font-weight: 900;
+	margin-left: 30px;
 }
 .header a{
 	position: relative;
 	text-decoration: none;
 	color: #fff;
 	top: 5px;
-	left: 85%;
+	left: 80%;
 	background: #444;
 	padding: 3px 10px;
-	box-shadow: 0px 0 5px #38AECC;
+	box-shadow: 0px 0 15px rgb(0.5, 0.5, 0.05);
 	border-radius: 10px;
 }
 .header a:hover{
@@ -35,7 +35,7 @@ body {
 }
 .header .light{
     position: relative;
-    left: 110%;
+    left: 71%;
     top: -18px;
     background: red;
     width: 20px;
@@ -43,32 +43,27 @@ body {
     border-radius: 50%;
     
 }
-.container{
-	width: 340px;
-	height: 520px;
-	background: #000;
-	border-radius: 15px;
-	box-shadow: 0px 0px 20px #38AECC;
-	padding: 10px;
-	overflow-y: scroll;
-}
+
+
 .container::-webkit-scrollbar{
     display:none;
 }
 .container form{
-	width: 100%;
+  position: relative;
+	width: 91%;
 	border: 1px solid #fff;
 	border-radius: 4px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	margin-left: 20px;
 }
 .container form input{
   color: #fff;
 	border: none;
 	outline: none;
 	box-shadow: none;
-	background: #000;
+	background: #222;
 	width: 91%;
 	font-size: 15px;
 	font-weight: 500;
@@ -84,13 +79,12 @@ body {
 	background: #333;
 	color: #fff;
 	border-radius: 10px;
-   box-shadow: 0 0 10px #fff;
+   box-shadow: 0 0 25px rgb(9, 9, 9);
 	height: 120px;
 	display: flex;
 	align-items: center;
 	cursor: pointer;
-	margin: 3px;
-	margin-bottom: 20px;
+	margin: 27px;
 }
 .product .p-details{
 	padding: 10px;
@@ -98,12 +92,13 @@ body {
 .product img{
   position: relative;
   margin-left: 11px;
-	width: 45px;
-	height: 45px;
+	width: 55px;
+	height: 55px;
 	object-fit: cover;
 	border-radius: 5px;
-   box-shadow: 0 0 15px #028090;
-   top: -20px;
+  top: -20px;
+   box-shadow: 0 0 25px rgb(0,0,0,0.05);
+
 }
 .product .p-details h2{
   position: relative;
@@ -123,15 +118,18 @@ body {
    text-decoration: none;
    color: #fff;
    top: -44px;
-   left: 200px;
-   background:  #38AECC;
+   left: 190px;
+   background:  black;
    padding: 0px 10px;
    border-radius: 10px;
    font-weight: 500;
-   font-size: 20px;
-   box-shadow: 0 0px 15px #38AECC;
+   font-size: 18px;
+   box-shadow: 0 0px 15px rgb(0,0,0,0.05);
 }
 .product .p-details a:hover{
 	background: #000;
 	color: cyan;
+}
+.end p{
+  text-align: center;
 }
