--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     position: relative;
     left: 71%;
     top: -18px;
-    background: #11FF03;
+    background: #FF0000;
     width: 20px;
     height: 20px;
     border-radius: 50%;
