--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemonada&family=Open+Sans&family=Patrick+Hand&family=Poppins&display=swap');
+
 body {
 	width: 100%;
 	height: 100vh;
@@ -11,12 +12,14 @@ body {
 }
 .header h1{
   position: relative;
-	text-align: center;
-	 font-size: 35px; 
-	 color: #fff;
+  font-size: 25px; 
+  color: #fff;
 	font-family: 'Lemonada', cursive;
-	font-weight: 900;
-	margin-left: 30px;
+	font-weight: 500;
+	top: -25px;
+	background: #222;
+	box-shadow: 0px 0 15px rgb(0,0,0,0.5);
+	padding: 4px;
 }
 .header a{
 	position: relative;
