--- a/style.css
+++ b/style.css
@@ -1,138 +1,144 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemonada&family=Open+Sans&family=Patrick+Hand&family=Poppins&display=swap');
 
 body {
-	width: 100%;
-	height: 100vh;
-	background: #222;
-	margin: 0;
-	display: flex;
-	flex-direction: column;
-	font-family: 'Poppins', sans-serif;
-	color: #fff;
-}
-.header h1{
-  position: relative;
-  font-size: 25px; 
+  width: 100%;
+  height: 100vh;
+  background: #222;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Poppins', sans-serif;
   color: #fff;
-	font-family: 'Lemonada', cursive;
-	font-weight: 500;
-	top: -25px;
-	background: #222;
-	box-shadow: 0px 0 15px rgb(0,0,0,0.5);
-	padding: 4px;
-}
-.header a{
-	position: relative;
-	text-decoration: none;
-	color: #fff;
-	top: 5px;
-	left: 80%;
-	background: #444;
-	padding: 3px 10px;
-	box-shadow: 0px 0 15px rgb(0.5, 0.5, 0.05);
-	border-radius: 10px;
-}
-.header a:hover{
-	background: black;
-	color: cyan;
-}
-.header .light{
-    position: relative;
-    left: 71%;
-    top: -18px;
-    background: #FF0000;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    
 }
 
-
-.container::-webkit-scrollbar{
-    display:none;
-}
-.container form{
+.header h1 {
   position: relative;
-	width: 91%;
-	border: 1px solid #fff;
-	border-radius: 4px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	margin-left: 20px;
-}
-.container form input{
+  font-size: 25px;
   color: #fff;
-	border: none;
-	outline: none;
-	box-shadow: none;
-	background: #222;
-	width: 91%;
-	font-size: 15px;
-	font-weight: 500;
-	padding: 8px 10px;
+  font-family: 'Lemonada', cursive;
+  font-weight: 500;
+  top: -25px;
+  background: #222;
+  box-shadow: 0px 0 15px rgb(0, 0, 0, 0.5);
+  padding: 4px;
 }
-.container form i{
-	padding-left: 10px;
+
+.header a {
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+  top: 21px;
+  left: 80%;
+  background: #444;
+  padding: 3px 10px;
+  box-shadow: 0px 0 15px rgb(0, 0, 0, 0.5);
+  border-radius: 10px;
 }
-.product-list{
-	padding: 10px 0;
+
+.header a:hover {
+  background: black;
+  color: cyan;
 }
-.product{
-	background: #333;
-	color: #fff;
-	border-radius: 10px;
-   box-shadow: 0 0 25px rgb(9, 9, 9);
-	height: 120px;
-	display: flex;
-	align-items: center;
-	cursor: pointer;
-	margin: 27px;
+
+.header .light {
+  position: relative;
+  padding: 5px;
+  margin-left: 16px;
+  color: #F25757;
 }
-.product .p-details{
-	padding: 10px;
+
+.container form {
+  position: relative;
+  width: 91%;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
 }
-.product img{
+
+.container form input {
+  color: #fff;
+  border: none;
+  outline: none;
+  box-shadow: none;
+  background: #222;
+  width: 91%;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 8px 10px;
+}
+
+.container form i {
+  padding-left: 10px;
+}
+
+.product-list {
+  padding: 10px 0;
+}
+
+.product {
+  background: #333;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 25px rgb(9, 9, 9);
+  height: 120px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  margin: 27px;
+}
+
+.product .p-details {
+  padding: 10px;
+}
+
+.product img {
   position: relative;
   margin-left: 11px;
-	width: 55px;
-	height: 55px;
-	object-fit: cover;
-	border-radius: 5px;
+  width: 55px;
+  height: 55px;
+  object-fit: cover;
+  border-radius: 5px;
   top: -20px;
-   box-shadow: 0 0 25px rgb(0,0,0,0.05);
+  box-shadow: 0 0 25px rgb(0, 0, 0, 0.05);
 
 }
-.product .p-details h2{
+
+.product .p-details h2 {
   position: relative;
   top: 5px;
-	font-size: 19px;
-	color: #fff;
+  font-size: 19px;
+  color: #fff;
 }
-.product .p-details span{
+
+.product .p-details span {
   position: relative;
   color: #8aa2a9;
   top: 15px;
   right: 50px;
 }
 
-.product .p-details a{
-   position: relative;
-   text-decoration: none;
-   color: #fff;
-   top: -44px;
-   left: 190px;
-   background:  black;
-   padding: 0px 10px;
-   border-radius: 10px;
-   font-weight: 500;
-   font-size: 18px;
-   box-shadow: 0 0px 15px rgb(0,0,0,0.05);
+.product .p-details a {
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+  top: -44px;
+  left: 190px;
+  background: black;
+  padding: 0px 10px;
+  border-radius: 10px;
+  font-weight: 500;
+  font-size: 18px;
+  box-shadow: 0 0px 15px rgb(0, 0, 0, 0.05);
 }
-.product .p-details a:hover{
-	background: #000;
-	color: cyan;
+
+.product .p-details a:hover {
+  background: #000;
+  color: cyan;
 }
-.end p{
+
+.end p {
   text-align: center;
 }
