--- a/Short/Style.css
+++ b/Short/Style.css
@@ -2,8 +2,7 @@
 
 body {
   width: 100%;
-  height: 100vh;
-  background: #222;
+  background: linear-gradient(#4C2582, #254582);
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -18,7 +17,7 @@ body {
   font-family: 'Lemonada', cursive;
   font-weight: 500;
   top: -25px;
-  background: #222;
+  background: #4C2582;
   box-shadow: 0px 0 15px rgb(0, 0, 0, 0.5);
   padding: 4px;
 }
@@ -28,8 +27,8 @@ body {
   text-decoration: none;
   color: #fff;
   top: 21px;
-  left: 60%;
-  background: #444;
+  left: 80%;
+  background: #254582;
   padding: 3px 10px;
   box-shadow: 0px 0 15px rgb(0, 0, 0, 0.5);
   border-radius: 10px;
@@ -44,7 +43,7 @@ body {
   position: relative;
   padding: 5px;
   margin-left: 16px;
-  color: #F25757;
+  color: #04FF00;
 }
 
 .container form {
@@ -63,7 +62,7 @@ body {
   border: none;
   outline: none;
   box-shadow: none;
-  background: #222;
+  background: #4C2582;
   width: 91%;
   font-size: 15px;
   font-weight: 500;
@@ -79,11 +78,11 @@ body {
 }
 
 .product {
-  background: #333;
+  background: #254582;
   color: #fff;
   border-radius: 10px;
-  box-shadow: 0 0 25px rgb(9, 9, 9);
-  height: 120px;
+  box-shadow: 0 0 25px rgb(0,0,0,0.5);
+  height: 90px;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -101,7 +100,7 @@ body {
   height: 55px;
   object-fit: cover;
   border-radius: 5px;
-  top: -20px;
+  top: 0px;
   box-shadow: 0 0 25px rgb(0, 0, 0, 0.05);
 
 }
@@ -124,7 +123,7 @@ body {
   position: relative;
   text-decoration: none;
   color: #fff;
-  top: -44px;
+  top: -29px;
   left: 190px;
   background: black;
   padding: 0px 10px;
